--- a/src/views/category.liquid
+++ b/src/views/category.liquid
@@ -4,6 +4,7 @@
 <div class="issue Dark">
 <div class="header-sm" style="background: '#ffffff'};">
  <div class="container">
+ <a href="https://www.columbia.edu/" class="logo-columbia-crest">Columbia University</a>
    <button class="btn-menu">
      <span class="bar"></span>
      <span class="bar"></span>
