--- a/src/views/article.liquid
+++ b/src/views/article.liquid
@@ -3,7 +3,8 @@
 <div class="article {{ content.field_theme }}">
 
   <div class="header-sm" style="background: {{ content.field_secondary_color }};">
- <div class="container">
+   <div class="container">
+     <a href="https://www.columbia.edu/" class="logo-columbia-crest">Columbia University</a>
      <button class="btn-menu">
        <span class="bar"></span>
        <span class="bar"></span>
@@ -29,7 +30,10 @@
    <div class="col-sm-10 col-sm-offset-1">
      <h1>{{ content.title }}</h1>
      <p class="subtitle">{{ content.field_subtitle }}</p>
-     <p class="author">{{ content.field_author }}</p>
+     <p class="author">{{ content.authors }}</p>
+     {% if content.translators %}
+     <p class="translator">Translated by {{ content.translators }}</p>
+     {% endif %}
      <p class="issue"><a href="/issue/{{ content.issue }}"><b>{{ content.issue_title }}</b></a></p>
   </div>
  </div>
