--- a/src/views/issue.liquid
+++ b/src/views/issue.liquid
@@ -11,6 +11,7 @@
     <div class="header-sm" style="background: {{ article.field_secondary_color }};">
     {% endfor %}
      <div class="container">
+       <a href="https://www.columbia.edu/" class="logo-columbia-crest">Columbia University</a>
        <button class="btn-menu">
          <span class="bar"></span>
          <span class="bar"></span>
