--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -52,7 +52,7 @@ body {
  }
 }
   p.translator,
-  p.author {
+  p.author a {
     font-size: 18px;
     color: #fff !important;
   }
@@ -91,7 +91,7 @@ body {
  p.translator, {
    font-size: 14px;
  }
- p.author {
+ p.author a {
    font-size: 18px;
    color: #000;
  }
@@ -784,4 +784,15 @@ h2.front-section {
     height: 300px;
     background: #eee;
   }
+}
+
+.row-author-summary {
+  text-align: center;
+  margin-bottom: 40px;
+}
+.author-image {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin: 0 auto;
 }
