--- a/src/views/menu.liquid
+++ b/src/views/menu.liquid
@@ -8,7 +8,7 @@
        <li><a href="/essays">Essays</a></li>
        <li><a href="/interviews">Interviews</a></li>
        <li><a href="/alumni-notes">Alumni Notes</a></li>
-       <li><a href="/spotlights">Spotlights </a></li>
+       <!--<li><a href="/spotlights">Spotlights </a></li>-->
        </ul>
        <div class="footer">
          <a href="/issues">Issues</a>
