--- a/src/views/issue.liquid
+++ b/src/views/issue.liquid
@@ -221,7 +221,7 @@
       <div class="alumni-notes">
       <div class="container">
         <div class="row">
-         <div class="col-sm-12">
+         <div class="col-sm-8 col-sm-offset-2">
          {% if notes.length > 0 %}
          <h2>Alumni notes</h2>
          {% endif %}
