--- a/src/views/article.liquid
+++ b/src/views/article.liquid
@@ -1,4 +1,4 @@
-{% include "head" title=content.title %}
+{% include "head" title=content.title subtitle=content.field_subtitle %}
 
 <div class="article {{ content.field_theme }}">
 
