add article meta description

--- a/src/views/head.liquid
+++ b/src/views/head.liquid
@@ -9,6 +9,10 @@
   {% endif %}
 	{% if subtitle !== "" %}
     <meta name="description" content="{{ subtitle }}">
+		<meta name="twitter:card" content="summary" />
+	  <meta name="twitter:site" content="@HarrimanInst" />
+	  <meta name="twitter:title" content="{{ title }}" />
+	  <meta name="twitter:description" content="{{ subtitle }}" />
   {% endif %}
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|EB+Garamond|Yantramanav:900" rel="stylesheet">
 	<link href="/dist/main.css" rel="stylesheet">
