--- a/src/views/head.liquid
+++ b/src/views/head.liquid
@@ -11,6 +11,7 @@
     <meta name="description" content="{{ subtitle }}">
 		<meta name="twitter:card" content="summary" />
 	  <meta name="twitter:site" content="@HarrimanInst" />
+		<meta name="twitter:image" content="https://api.magazine.harriman.danmccarey.com{{ image }}" />
 	  <meta name="twitter:title" content="{{ title }}" />
 	  <meta name="twitter:description" content="{{ subtitle }}" />
   {% endif %}
