add article meta description

--- a/src/views/article.liquid
+++ b/src/views/article.liquid
@@ -1,4 +1,4 @@
-{% include "head" title=content.title subtitle=content.field_subtitle image=content.field_images %}
+{% include "head" title=content.title subtitle=content.field_subtitle image=content.field_thumbnail %}
 
 <div class="article {{ content.field_theme }}">
 
