--- a/src/views/footer.liquid
+++ b/src/views/footer.liquid
@@ -13,14 +13,11 @@
       </ul>
       <a href="/" class="logo-columbia">Columbia University</a>
     </div>
-    <div class="col-sm-2">
-      <ul>
-        <!-- <li><a href="">Current Issue</a> -->
-        <li><a href="/issues">Past Issues</a>
-      </ul>
+    <div class="col-sm-1">
     </div>
     <div class="col-sm-2">
       <ul>
+         <li><a href="/issues">Issues</a>
         <li><a href="/profiles">Profiles</a>
         <li><a href="/essays">Essays</a>
         <li><a href="/interviews">Interviews</a>
@@ -29,12 +26,11 @@
     </div>
     <div class="col-sm-2">
       <ul class="about-menu">
-      <li><a href="">About the Magazine</a>
-      <li><a href="">Staff</a>
-      <li><a href="">Contact Us</a>
+      <li><a href="/about">About the Magazine</a>
+      <li><a href="/contact">Contact Us</a>
       </ul>
     </div>
-    <div class="col-sm-2">
+    <div class="col-sm-3">
       <ul>
         <li><a href="https://harriman.columbia.edu/">Harriman Institute</a></li>
         <li><a href="https://ma.harriman.columbia.edu/">MARS-REERS Program</a></li>
@@ -48,12 +44,13 @@
      <div class="col-sm-12">
        <div class="legal">
           <p>Print Design & Art Direction by Columbia Creative</p>
-          <p>&copy;2019 Harriman Institute Columbia University</p>
+          <p>&copy;{{ "now" | date: "%Y" }} Harriman Institute Columbia University</p>
         </div>
       </div>
     </div>
   </div>
 </div>
 
+</div>
 </body>
 </html>
