--- a/src/views/menu.liquid
+++ b/src/views/menu.liquid
@@ -1,9 +1,11 @@
 <div class="main-menu">
+<div class="main-menu--content">
  <div class="container">
-  <button class="btn-close">X</button>
+  <button class="btn-close"><i class="bi bi-x-lg"></i></button>
    <div class="content">
-     <div class="col-sm-3">
+     <div class="col-sm-4">
        <ul>
+       <li><a href="/">Home</a></li>
        <li><a href="/profiles">Profiles</a></li>
        <li><a href="/essays">Essays</a></li>
        <li><a href="/interviews">Interviews</a></li>
@@ -17,4 +19,6 @@
      </div>
    </div>
  </div>
+ </div>
+ <div class="mask"></div>
 </div>
