--- a/src/views/head.liquid
+++ b/src/views/head.liquid
@@ -17,6 +17,7 @@
   {% endif %}
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|EB+Garamond|Yantramanav:900" rel="stylesheet">
 	<link href="/dist/main.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="/dist/js/global.js"></script>
 
@@ -33,3 +34,5 @@
 
 </head>
 <body>
+  <div class="top-bar"><a href="https://www.columbia.edu/">Columbia University in the City of New York</a></div>
+  <div class="page">
