--- a/src/views/menu.liquid
+++ b/src/views/menu.liquid
@@ -17,6 +17,12 @@
          <a target="blank" href="https://eurasianet.org/podcast/expert-opinions">Podcast</a></li>
         </div>
      </div>
+     <div class="col-sm-7">
+      <form class="search-form">
+        <input class="search-box" placeholder="Search..." type="text" />
+        <button class="search-btn"><i class="bi bi-search"></i></button>
+      </form>
+     </div>
    </div>
  </div>
  </div>
