--- a/src/views/search.liquid
+++ b/src/views/search.liquid
@@ -5,19 +5,44 @@
 <div class="container">
   <div class="row">
   <div class="col-sm-3">
-    <h1>Search Results</h1>
+
   </div>
 <div class="col-sm-8">
-{% if !content %}
-  <div class="search-result">
-   <h2>No results found. </h2>
-  </div>
-{% endif %}
+
+  <h2>Search results</h2>
 {% for result in content %}
   <div class="search-result">
-     <a href="/interview/{{ result.nid }}"><h2>{{ result.title }}</h2></a>
+     {% for type in result.type %}
+      {% assign content_type = type.target_id %}
+     {% endfor %}
+
+    {% if content_type == 'alumni_notes' %}
+     {% for nid in result.nid %}
+      <a href="/note/{{nid.value}}">
+    {% endfor %}
+     {% for item in result.title %}
+      {{ item.value }}
+     {% endfor %}
+     <br><span>Alumni note</span>
+     </a>
+     {% endif %}
+  
+  {% if content_type == 'article' %}
+     {% for nid in result.nid %}
+      <a href="/article/{{nid.value}}">
+    {% endfor %}
+     {% for item in result.title %}
+      {{ item.value }}
+     {% endfor %}
+     <br><span>Article</span>
+     </a>
+     {% endif %}
+    
   </div>
 {% endfor %}
+{% if content.length == 0 %}
+  <p>No results found.</p>
+{% endif %}
   </div>
  </div>
 </div>
