--- a/src/views/footer.liquid
+++ b/src/views/footer.liquid
@@ -10,6 +10,7 @@
         <li><a class="icon-twitter" href="https://twitter.com/HarrimanInst">Twitter</a></li>
         <li><a class="icon-instagram" href="https://www.instagram.com/harrimaninstitute/">Instagram</a></li>
         <li><a class="icon-youtube" href="https://www.youtube.com/channel/UCKWSMiS-sC7lOxKIoMx0PIA">YouTube</a></li>
+        <li><a class="icon-linkedin" href="https://www.linkedin.com/company/the-harriman-institute/">LinkedIn</a></li>
       </ul>
       <a href="/" class="logo-columbia">Columbia University</a>
     </div>
