--- a/src/views/menu.liquid
+++ b/src/views/menu.liquid
@@ -21,6 +21,13 @@
       <form class="search-form">
         <input class="search-box" placeholder="Search..." type="text" />
         <button class="search-btn"><i class="bi bi-search"></i></button>
+        <ul class="social-media-icons">
+        <li><a class="icon-facebook" href="https://www.facebook.com/TheHarrimanInstitute/">Facebook</a></li>
+        <li><a class="icon-twitter" href="https://twitter.com/HarrimanInst">Twitter</a></li>
+        <li><a class="icon-instagram" href="https://www.instagram.com/harrimaninstitute/">Instagram</a></li>
+        <li><a class="icon-youtube" href="https://www.youtube.com/channel/UCKWSMiS-sC7lOxKIoMx0PIA">YouTube</a></li>
+        <li><a class="icon-linkedin" href="https://www.linkedin.com/company/the-harriman-institute/">LinkedIn</a></li>
+      </ul>
       </form>
      </div>
    </div>
