--- a/src/views/notes.liquid
+++ b/src/views/notes.liquid
@@ -35,7 +35,7 @@
          {% for article in content %}
           <div class="col-sm-3">
           <div class="alumni-note-item">
-            <p><a href="/note/{{article.nid_1}}">{{ article.title }}</a></p>
+            <p><a href="/note/{{article.nid}}">{{ article.title }}</a></p>
           </div>
           </div>
          {% endfor %}
